page fix white spacing v2

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1784,9 +1784,12 @@ ul.layout-navigation.layout-navigation--full-width.layout--large-screen-only.dro
 .layout__header-row {
     overflow: hidden!important;
 }
+@media only screen and (min-width: 980px) {
 .layout--fixed-header {
     overflow: hidden!important;
+}    
 }
+
 .path-taxonomy .lc-btn-box {display: none;}
 .path-taxonomy .lc-contact-box { display: none; }
 .path-taxonomy .lc-price-box { display: none; }
